# simple-process-tracker-rs

./: Cargo.toml  README.md
src/: client.rs  commands.rs  lib.rs  main.rs  process_scanner.rs  server.rs
src/client_utils/: client.rs  mod.rs  response_handler.rs
src/errors/: mod.rs  process_error.rs
src/server_utils/: background_tasks.rs  mod.rs  server.rs  user_commands.rs
src/structures/: config.rs  legacy_process.rs  mod.rs  process.rs
tests/: integration_tests.rs
