[package]
name = "simple-process-tracker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simple-process-tracker"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
comfy-table = "6.1.4"
dirs = "5.0.1"
futures-lite = "1.13.0"
interprocess = { version = "1.2.1", features = ["tokio_support"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "time", "macros", "sync", "fs"] }
