[package]
name = "simple-process-tracker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simple-process-tracker-cli"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
comfy-table = "6.1.4"
dirs = "5.0.1"
futures-lite = "1.13.0"
interprocess = { version = "1.2.1", features = ["tokio_support"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "time", "macros", "sync", "fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Diagnostics_ToolHelp", "Win32_Foundation", "Win32_System_Kernel"] }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Remove debug symbols
